--- a/src/components/Meta.astro
+++ b/src/components/Meta.astro
@@ -116,12 +116,12 @@ const appleTouchIcon = await getImage({
 <meta name="twitter:image" content={socialImage} />
 
 <!-- Links to the webmanifest and sitemap -->
-<link rel="manifest" href="/manifest.json" />
+<link rel="manifest" href="/dist/manifest.json" />
 <!-- https://docs.astro.build/en/guides/integrations-guide/sitemap/ -->
-<link rel="sitemap" href="/sitemap-index.xml" />
+<link rel="sitemap" href="/dist/sitemap-index.xml" />
 
 <!-- Links for favicons -->
-<link href="/favicon.ico" rel="icon" sizes="any" type="image/x-icon" />
+<link href="/dist/favicon.ico" rel="icon" sizes="any" type="image/x-icon" />
 <link href={faviconSvg.src} rel="icon" type="image/svg+xml" sizes="any" />
 <meta name="mobile-web-app-capable" content="yes" />
 <link href={appleTouchIcon.src} rel="apple-touch-icon" />
